Should be working

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "description": "",
   "main": "index.js",
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SolveigRebnord/ca-socialmedia.git"
@@ -22,6 +21,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "vite": "^3.1.0"
   }
 }
