--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "vite": "^3.1.0"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.5",
+    "vite-plugin-require": "^1.0.5"
   }
 }
