--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "pretty": "npx prettier --write .",
+    "checkPretty": "npx prettier --check .",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
+    "husky": "^8.0.1",
     "lodash": "^4.17.21",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
@@ -28,6 +32,7 @@
   },
   "dependencies": {
     "dayjs": "^1.11.5",
+    "prettier": "^2.7.1",
     "vite-plugin-require": "^1.0.5"
   }
 }
