--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "preview": "vite preview",
     "pretty": "npx prettier --write .",
     "checkPretty": "npx prettier --check .",
-    "quickPretty": "pretty-quick",
-    "prepare": "husky install"
+    "quickPretty": "pretty-quick"
   },
   "husky": {
     "hooks": {
