--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "preview": "vite preview",
     "pretty": "npx prettier --write .",
     "checkPretty": "npx prettier --check .",
-    "quickPretty": "pretty-quick"
+    "quickPretty": "pretty-quick",
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run vite"
+      "pre-commit": "npm run dev"
     }
   },
   "devDependencies": {
