--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "pretty": "npx prettier --write .",
     "checkPretty": "npx prettier --check .",
     "quickPretty": "pretty-quick",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest",
+    "lint": "eslint js"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
+    "eslint": "^8.27.0",
     "husky": "^8.0.1",
+    "jest": "^29.3.1",
     "lodash": "^4.17.21",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
